--- a/style.css
+++ b/style.css
@@ -74,12 +74,33 @@ section {
   text-align: center;
 }
 
-/* Home Section */
+/* Home Section - mobile-accessible */
 .home-section {
-  background-image: url('thelastsupper.jpg'); /* GitHub root image */
-  background-size: cover;
-  background-position: center;
+  background-image: url('thelastsupper.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center top;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.home-section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0);
+  z-index: 0;
+}
+
+.home-text {
+  position: relative;
+  z-index: 1;
 }
 
 /* Content Sections */
@@ -147,5 +168,10 @@ section {
 
   section {
     padding: 50px 15px;
+  }
+
+  .home-section {
+    background-size: contain;
+    background-position: center top;
   }
 }
