--- a/style.css
+++ b/style.css
@@ -74,12 +74,12 @@ section {
   text-align: center;
 }
 
-/* Home Section - mobile-accessible */
+/* Home Section - full coverage horizontal image */
 .home-section {
-  background-image: url('thelastsupper.jpg');
-  background-size: contain;
+  background-image: url('hthelastsupper.jpg');
+  background-size: cover; /* fills entire section */
+  background-position: center center;
   background-repeat: no-repeat;
-  background-position: center top;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -94,7 +94,7 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0);
+  background: rgba(0,0,0,0); /* overlay transparent */
   z-index: 0;
 }
 
@@ -171,7 +171,7 @@ section {
   }
 
   .home-section {
-    background-size: contain;
-    background-position: center top;
+    background-size: cover;
+    background-position: center center;
   }
 }
